rust/container_client.h

/* Generated by cbindgen — do not edit. */

#ifndef CONTAINER_CLIENT_H
#define CONTAINER_CLIENT_H

#include <stddef.h>
#include <stdint.h>

/**
 * Opaque XPC connection handle.
 */
typedef void *xpc_connection_t;

/**
 * Opaque XPC object pointer (dictionaries, arrays, FDs, …).
 */
typedef void *xpc_object_t;

/**
 * Block/function-pointer type for `xpc_connection_set_event_handler`.
 */
typedef void (*XpcHandler)(xpc_object_t);

/**
 * Returns a JSON array of containers.
 *
 * # Safety
 *
 * The returned pointer must be freed with [`container_free_string`].
 */
char *container_list_json(void);

/**
 * Returns a JSON object with container statistics.
 *
 * # Safety
 *
 * - `container_id` must be a valid, NUL-terminated C string.
 * - The returned pointer must be freed with [`container_free_string`].
 */
char *container_stats_json(const char *container_id);

/**
 * Free a string previously returned by this library.
 *
 * # Safety
 *
 * `ptr` must have been returned by one of the `container_*_json`
 * functions, or be null (in which case this is a no-op).
 */
void container_free_string(char *ptr);

extern xpc_connection_t xpc_connection_create_mach_service(const char *name,
                                                           void *target_queue,
                                                           uint64_t flags);

extern void xpc_connection_set_event_handler(xpc_connection_t connection, XpcHandler handler);

extern void xpc_connection_activate(xpc_connection_t connection);

extern void xpc_connection_cancel(xpc_connection_t connection);

extern xpc_object_t xpc_connection_send_message_with_reply_sync(xpc_connection_t connection,
                                                                xpc_object_t message);

extern xpc_object_t xpc_dictionary_create_empty(void);

extern void xpc_dictionary_set_string(xpc_object_t xdict, const char *key, const char *value);

extern void xpc_dictionary_set_data(xpc_object_t xdict,
                                    const char *key,
                                    const void *bytes,
                                    size_t length);

extern const char *xpc_dictionary_get_string(xpc_object_t xdict, const char *key);

extern const void *xpc_dictionary_get_data(xpc_object_t xdict, const char *key, size_t *length);

extern xpc_object_t xpc_dictionary_get_value(xpc_object_t xdict, const char *key);

extern size_t xpc_array_get_count(xpc_object_t xarray);

extern xpc_object_t xpc_array_get_value(xpc_object_t xarray, size_t index);

extern int xpc_fd_dup(xpc_object_t xpc_fd);

/**
 * Returns a malloc'd C string; **caller must `free()` it**.
 */
extern char *xpc_copy_description(xpc_object_t object);

extern const void *xpc_get_type(xpc_object_t object);

extern void xpc_release(xpc_object_t object);

#endif  /* CONTAINER_CLIENT_H */